update query for batch

--- a/force-app/main/default/classes/AccountBatch.cls
+++ b/force-app/main/default/classes/AccountBatch.cls
@@ -1,9 +1,25 @@
 global class AccountBatch implements Database.Batchable<sObject> {
+
+    // Ces ensembles vont stocker les IDs des comptes avec des commandes et des tâches
+    private Set<Id> accountIdsWithOrders;
+    private Set<Id> accountIdsWithCallTasks;
+
+    // Le constructeur pour initialiser les sets
+    global AccountBatch() {
+        // Récupère les ID de compte ayant une commande
+        accountIdsWithOrders = new Map<Id, Order>([SELECT AccountId FROM Order]).keySet();
+        
+        // Récupère les ID de compte ayant une tâche avec le sujet 'Call'
+        accountIdsWithCallTasks = new Map<Id, Task>([SELECT WhatId FROM Task WHERE Subject = 'Call' AND WhatId != null]).keySet();
+    }
     
     global Database.QueryLocator start(Database.BatchableContext bc) {
-        return Database.getQueryLocator(
-            'SELECT Id, (SELECT Id FROM Orders), (SELECT Id FROM Tasks WHERE Subject = \'Call\') FROM Account WHERE Id NOT IN (SELECT AccountId FROM Order) AND Id NOT IN (SELECT WhatId FROM Task WHERE Subject = \'Call\')'
-        );
+        // Votre requête utilisera les sets pour filtrer les comptes à traiter
+        return Database.getQueryLocator([
+            SELECT Id, (SELECT Id FROM Orders), (SELECT Id FROM Tasks WHERE Subject = 'Call')
+            FROM Account 
+            WHERE Id NOT IN :accountIdsWithOrders AND Id NOT IN :accountIdsWithCallTasks
+        ]);
     }
     
     global void execute(Database.BatchableContext bc, List<Account> scope) {
@@ -28,6 +44,6 @@ global class AccountBatch implements Database.Batchable<sObject> {
     }
     
     global void finish(Database.BatchableContext bc) {
-        
+        // Code final s'il est nécessaire
     }
 }
